fixed map height on mobile

--- a/app/components/GasStationsMap/GasStationsMap.module.css
+++ b/app/components/GasStationsMap/GasStationsMap.module.css
@@ -5,7 +5,7 @@
 
 @media (min-width: 400px) {
   .mapContainer {
-    height: 720px;
+    height: 690px;
   }
 }
 
